Adding peek() usage in streams.